--- a/Audio Summarizer/requirements.txt
+++ b/Audio Summarizer/requirements.txt
@@ -1,9 +1,9 @@
-streamlit
-assemblyai
-torch
-transformers
-langchain
-langchain-community
-faiss-cpu
-sentence-transformers
-tensorflow
+streamlit==1.31.1
+assemblyai==0.17.0
+torch==2.2.0
+transformers==4.37.2
+langchain==0.1.9
+langchain-community==0.0.24
+faiss-cpu==1.7.4
+sentence-transformers==2.5.1
+tensorflow==2.15.0
