--- a/Audio Summarizer/requirements.txt
+++ b/Audio Summarizer/requirements.txt
@@ -7,3 +7,10 @@ langchain-community==0.0.24
 faiss-cpu==1.7.4
 sentence-transformers==2.5.1
 tensorflow==2.15.0
+python-dotenv==1.0.0
+numpy==1.24.3
+pandas==2.1.4
+scikit-learn==1.3.2
+tqdm==4.66.1
+protobuf==4.25.1
+accelerate==0.27.2
