--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
-streamlit
-assemblyai
-torch
-transformers
-langchain
-langchain-community
-faiss-cpu
-sentence-transformers
-tensorflow
+streamlit==1.31.1
+assemblyai==0.17.0
+torch==2.2.0
+transformers==4.37.2
+langchain==0.1.9
+langchain-community==0.0.24
+faiss-cpu==1.7.4
+sentence-transformers==2.5.1
+tensorflow==2.14.0
+keras==2.14.0
+tf-keras==2.14.0
+python-dotenv==1.0.0
+numpy==1.24.3
+pandas==2.1.4
+scikit-learn==1.3.2
+tqdm==4.66.1
+protobuf==4.25.1
+accelerate==0.27.2
