--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,11 @@ langchain==0.1.9
 langchain-community==0.0.24
 faiss-cpu==1.7.4
 sentence-transformers==2.5.1
-tensorflow==2.16.1  
-keras==2.16.1       
-tf-keras==2.16.1    
+tensorflow==2.14.0
+keras==2.14.0
+tf-keras==2.14.0
 python-dotenv==1.0.0
-numpy==1.24.3
+numpy>=1.26.0
 pandas==2.1.4
 scikit-learn==1.3.2
 tqdm==4.66.1
