--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ faiss-cpu==1.7.4
 sentence-transformers==2.5.1
 tensorflow==2.14.0
 keras==2.14.0
-tf-keras==2.14.0
+tf-keras==2.14.1  # Updated to the earliest available version
 python-dotenv==1.0.0
 numpy>=1.26.0
 pandas==2.1.4
