--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,11 @@
-streamlit==1.31.1
-assemblyai==0.17.0
-torch==2.2.0
-transformers==4.37.2
-langchain==0.1.9
-langchain-community==0.0.24
-faiss-cpu==1.7.4
-sentence-transformers==2.5.1
-tensorflow==2.14.0
-keras==2.14.0
-tf-keras==2.14.1  # Updated to the earliest available version
-python-dotenv==1.0.0
-numpy>=1.26.0
-pandas==2.1.4
-scikit-learn==1.3.2
-tqdm==4.66.1
-protobuf==4.25.1
-accelerate==0.27.2
+streamlit>=1.30.0
+assemblyai>=0.17.0
+torch>=2.0.0
+transformers>=4.36.0
+tensorflow>=2.14.0
+langchain>=0.1.0
+langchain-community>=0.0.13
+faiss-cpu>=1.7.4
+sentence-transformers>=2.2.2
+huggingface-hub>=0.20.0
+protobuf>=4.25.0
