--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
+# Core dependencies
 streamlit>=1.30.0
 assemblyai>=0.17.0
 torch>=2.0.0
 transformers>=4.36.0
-tensorflow>=2.14.0
+sentence-transformers>=2.2.2
+faiss-cpu>=1.7.4
 langchain>=0.1.0
 langchain-community>=0.0.13
-faiss-cpu>=1.7.4
-sentence-transformers>=2.2.2
-huggingface-hub>=0.20.0
+
+# TensorFlow related (with specific versions to ensure compatibility)
+tensorflow==2.14.0
+tf-keras==2.15.0
 protobuf>=4.25.0
+
+# Additional dependencies
+numpy>=1.24.0
+tqdm>=4.66.0
+requests>=2.31.0
+python-dotenv>=1.0.0
