--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,9 @@ faiss-cpu>=1.7.4
 langchain>=0.1.0
 langchain-community>=0.0.13
 
-# TensorFlow related (with specific versions to ensure compatibility)
-tensorflow==2.14.0
-tf-keras==2.15.0
-protobuf>=4.25.0
-
 # Additional dependencies
 numpy>=1.24.0
 tqdm>=4.66.0
 requests>=2.31.0
 python-dotenv>=1.0.0
+huggingface-hub>=0.20.0
